--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ssred-webcomponents-app",
   "scripts": {
     "dev": "npm-run-all --parallel dev:*",
-    "dev:server": "tsx watch src/index.tsx",
+    "dev:server": "tsx watch src/index.ts",
     "dev:client": "esbuild src/client/index.tsx --bundle --outfile=static/client.js --watch",
     "build": "npm-run-all --parallel build:*",
     "build:server": "tsc",
